Changed Colours to Dark theme

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -51,10 +51,12 @@ $hr-border-width:             $border-width;
 // Colors
 //
 
-$text-color:       rgba(0, 0, 0, 0.87) !default;
+//$text-color:       rgba(0, 0, 0, 0.87) !default;
+$text-color:       #F0F8FF !default;
 $background-color: #f5f5f5;
 
-$white:            #fff;
+//$white:            #fff;
+$white:            #222831;
 $primary:          #42b983;
 $secondary:        #8d7edc;
 $success:          #65e892;
