--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    I'm an Undergraduate student studying in Eastern University Srilanka.Following Physical Science Degree with subjects Computer Science, Physics and Applied Mathematics. I am very interested in th field of Web Development and Android App Development. My hobby is content creation and I have a good knowledge in Adobe Creative Suite.
+    I'm an fresh graduate willing to dive deep in Web Development.And  I am very interested in th field of Artificial Intelligence and Data Science. My hobby is content creation and I have a good knowledge in Adobe Creative Suite.
 </div>
