--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    I'm an fresh graduate willing to dive deep in Web Development.And  I am very interested in th field of Artificial Intelligence and Data Science. My hobby is content creation and I have a good knowledge in Adobe Creative Suite.
+    A highly motivated individual with a passion for data engineering and a strong foundation in Google Cloud Platform. Eager to leverage hands-on experience gained through self-initiated projects in Google lab environments to transition into a data engineering role.Committed to continuous learning and professional growth. My hobby is content creation and I have a good knowledge in Adobe Creative Suite.
 </div>
