--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#f5f5f5">
 
+  <!--Upgrade all insecure http requests to https so the site resources .css .js files could be retrieved properly-->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+
+
   <!-- Twitter Tags -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ title | escape }}">
