--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    A highly motivated individual with a passion for data engineering and a strong foundation in Google Cloud Platform. Eager to leverage hands-on experience gained through self-initiated projects in Google lab environments to transition into a data engineering role.Committed to continuous learning and professional growth. My hobby is content creation and I have a good knowledge in Adobe Creative Suite.
+    Results-driven Operations Engineer with 3+ years of experience in the US healthcare industry, proficient in ITIL processes, scripting (PowerShell, Python), and system monitoring. Passionate about automation and DevOps, actively transitioning into a DevOps Engineer role with hands-on experience in CI/CD pipelines, infrastructure management, and deployment automation. Skilled in troubleshooting complex issues and collaborating with development and operations teams to enhance efficiency, reliability, and scalability in cloud and on-premises environments.
 </div>
